--- a/public/index.pro.html
+++ b/public/index.pro.html
@@ -14,9 +14,9 @@
     <meta name="imagemode" content="force">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="shareRange" content="1" />
-    <title>物资出厂</title>
-    <script src="./cordova.js?ver=md5"></script>
-    <script src="./cordova_plugins.js?ver=md5"></script>
+    <title>萍安云护校管理平台</title>
+    <script charset="utf-8" src="https://map.qq.com/api/js?v=2.exp&key=XWWBZ-RBM33-HSX3N-3VCZF-MMCUE-5WFJF"></script>
+    <script src="http://pv.sohu.com/cityjson?ie=utf-8"></script>
 </head>
 
 <body>
