--- a/public/index.pro.html
+++ b/public/index.pro.html
@@ -16,13 +16,12 @@
   <meta name="shareRange" content="1" />
   <meta name="description" content="ITV基于vue2.0开发的移动端可定制组件库，一个强大功能的组件库。">
   <meta name="keywords" content="ITV组件库,ITV,vue组件库,自定义组件库,移动端组件库,移动端,vue2.0组件库,vue3.0组件库" />
-  <title>ITV组件库</title>
+  <title>ITV</title>
+
 </head>
 
 <body>
-  
   <div id="app"></div>
-  <!-- built files will be auto injected -->
 </body>
 
 </html>
