--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,19 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
+  <meta name="format-detection" content="telephone=no">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <!-- <meta name="screen-orientation" content="landscape"> -->
+  <meta name="full-screen" content="yes">
+  <meta name="browsermode" content="application">
+  <meta name="layoutmode" content="fitscreen">
+  <meta name="nightmode" content="disable">
+  <meta name="imagemode" content="force">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+  <meta name="shareRange" content="1" />
+  <meta name="description" content="ITV基于vue2.0开发的移动端可定制组件库，一个强大功能的组件库。">
+  <meta name="keywords" content="ITV组件库,ITV,vue组件库,自定义组件库,移动端组件库,移动端,vue2.0组件库,vue3.0组件库" />
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
